--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -9,7 +9,7 @@
 <ul>
   <li>Baloons (I love baloons)</li>
   <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
+  <li>Moo deng photos</li>
 </ul>
 
 <h3>This is where you need to go:</h3>
